Config: env-driven settings (SECRET_KEY/DEBUG/ALLOWED_HOSTS), add STATIC_ROOT; fix Dockerfile collectstatic; improve example.env; add .env.production.example; ignore evolve_env/

--- a/example.env
+++ b/example.env
@@ -2,6 +2,11 @@
 # Copy this file to ".env" and fill in values.
 # Do NOT commit your real .env file.
 
+# Basic Django settings for local development
+DEBUG=true
+SECRET_KEY=dev-only-change-me
+ALLOWED_HOSTS=localhost,127.0.0.1
+
 # --- SMSLeopard ---
 SMSLEOPARD_ENVIRONMENT=development
 SMSLEOPARD_API_KEY={{SMSLEOPARD_API_KEY}}
