CRITICAL FIX: Static files serving on Render
- Fixed .dockerignore to include source static files (was excluding /static)
- Updated Dockerfile to use gunicorn instead of runserver (production mode)
- Added startup script with proper initialization sequence
- Forced DEBUG=False on Render platform to enable WhiteNoise
- Added detailed logging and diagnostics

This should resolve the 404 errors on static files in production.

--- a/.dockerignore
+++ b/.dockerignore
@@ -31,7 +31,7 @@ db.sqlite3-journal
 media
 
 # Static files (will be collected in container)
-/static
+# Note: We need /static (source files) but not /staticfiles (generated)
 /staticfiles
 
 # OS
