chore: update .env.production.example with complete production keys template

--- a/.env.production.example
+++ b/.env.production.example
@@ -1,28 +1,41 @@
-# Production environment example (.env.production)
-# Copy values into your production environment variables manager.
-# Do NOT commit real secrets!
+# Production environment variables (example)
+# Copy these into Render → Environment and fill in the values.
+# NOTE: Do NOT commit real secrets. Keep this file as an example only.
 
-# Core Django
+# Django
+SECRET_KEY=
 DEBUG=false
-SECRET_KEY={{GENERATE_A_STRONG_SECRET}}
-ALLOWED_HOSTS=your.domain.com
+ALLOWED_HOSTS=evolve-platform.onrender.com
 
-# Production Security (optional - defaults to True when DEBUG=false)
-# SECURE_SSL_REDIRECT=true  # Set to false if not using HTTPS
+# Production Security (optional)
+# SECURE_SSL_REDIRECT=true
 
-# External Services
-PESAPAL_SANDBOX=false  # Use production Pesapal
+# Database (optional)
+# If using Postgres on Render, set DATABASE_URL and optionally DB_SSLROOTCERT
+# DATABASE_URL=postgres://user:pass@host:5432/dbname
+# DB_SSLROOTCERT=/path/to/ca.pem
 
-# Database (Aiven Postgres)
-# Example DSN (replace placeholders with your real values)
-DATABASE_URL=postgres://{{DB_USER}}:{{DB_PASSWORD}}@{{DB_HOST}}:{{DB_PORT}}/{{DB_NAME}}?sslmode=require
-# Optional: if you store the Aiven CA locally in the container or host
-# DB_SSLROOTCERT=config/aiven-ca.pem
+# Pesapal (production)
+PESAPAL_BASE_URL=https://pay.pesapal.com/v3
+PESAPAL_CONSUMER_KEY=
+PESAPAL_CONSUMER_SECRET=
+PESAPAL_NOTIFICATION_ID=
+PESAPAL_BRANCH=
+PESAPAL_SANDBOX=false
 
-# Email (optional)
-EMAIL_HOST=smtp.example.com
+# SMSLeopard (optional)
+SMSLEOPARD_ENVIRONMENT=
+SMSLEOPARD_API_KEY=
+SMSLEOPARD_API_SECRET=
+SMSLEOPARD_ACCESS_TOKEN=
+
+# Email (recommended)
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+EMAIL_HOST=
 EMAIL_PORT=587
 EMAIL_USE_TLS=true
-EMAIL_HOST_USER={{SMTP_USER}}
-EMAIL_HOST_PASSWORD={{SMTP_PASSWORD}}
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+DEFAULT_FROM_EMAIL=no-reply@evolve-platform.onrender.com
+EMAIL_SUBJECT_PREFIX=[EvolvePay] 
 
