fix: auto-create reseller profiles to prevent 'Profile not found' error
- Add management command to fix existing users with missing reseller profiles
- Update marketing link creation to auto-create profile if missing
- Successfully created profile for existing reseller user
- Users can now create marketing links without errors

--- a/.env.production.example
+++ b/.env.production.example
@@ -10,9 +10,10 @@ ALLOWED_HOSTS=evolve-platform.onrender.com
 # Production Security (optional)
 # SECURE_SSL_REDIRECT=true
 
-# Database (optional)
-# If using Postgres on Render, set DATABASE_URL and optionally DB_SSLROOTCERT
-# DATABASE_URL=postgres://user:pass@host:5432/dbname
+# Database
+# Use the Service URI from your provider (Aiven) and require SSL.
+DATABASE_URL=postgres://username:password@host:port/database?sslmode=require
+# Optional: pin a CA file if required by your environment.
 # DB_SSLROOTCERT=/path/to/ca.pem
 
 # Pesapal (production)
